--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -17,9 +17,4 @@
 @import "search-document";
 @import "filter";
 @import "document-list";
-@import "document";
-@import "info";
-@import "persons";
-@import "video";
-@import "photo";
-@import "awards";
+@import "document"
